Salesforce/force-app/main/default/objects/Case_Mapping__mdt/Case_Mapping__mdt.object-meta.xml
<CustomObject>
    <label>Case Mapping</label>
    <pluralLabel>Case Mappings</pluralLabel>
</CustomObject>