Salesforce/force-app/main/default/objects/Case_Mapping__mdt/fields/QBCC_Case_Type_API__c.field-meta.xml
<CustomField>
    <fullName>QBCC_Case_Type_API__c</fullName>
    <label>QBCC Case Type API</label>
    <length>255</length>
    <type>Text</type>
</CustomField>