Salesforce/force-app/main/default/objects/Case_Mapping__mdt/fields/Sub_Status_Api__c.field-meta.xml
<CustomField>
    <fullName>Sub_Status_Api__c</fullName>
    <label>Sub Status Api</label>
    <length>255</length>
    <type>Text</type>
</CustomField>