Salesforce/force-app/main/default/objects/Case_Mapping__mdt/listViews/All_Values.listView-meta.xml
<ListView>
    <fullName>All_Values</fullName>
    <columns>DeveloperName</columns>
    <columns>Record_Type__c</columns>
    <columns>QBCC_Case_Type_API__c</columns>
    <columns>Sub_Status_Api__c</columns>
    <columns>Sub_Type_Api__c</columns>
    <columns>IsActive__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Values</label>
    <language>en_US</language>
</ListView>